accounts/c3s_pentestplatform/main.tf
#C3S-IaC Account C3S_PenTestPlatform main.tf - Terraform coding for C3S infrastrcture as code
#======================================================================
#  Header
#======================================================================


provider "aws" {
  region = "us-east-1"
  profile = "141589809068_12hrAdministratorAccess"
}




#======================================================================
#  VPC and Subnets
#======================================================================

module network {
    source    = "../../modules/network" 
    subnet_cidr_block_private = var.subnet_cidr_block_private
    app_abb = "pen"
    create_dmz = false
    vpc_cidr_block="10.0.4.0/23"
}


#======================================================================
# private Security Group 
#======================================================================

resource "aws_security_group" "PenTest_pri_SG" {
  name        = "PenTest_pri_SG"
  description = "PenTest Private Security Group"
  vpc_id      = module.network.vpc-id

  ingress {
    description      = "ICMP from VPC"
    from_port        = -1
    to_port          = -1
    protocol         = "ICMP"
    cidr_blocks      = [var.subnet_cidr_block_dmz]
  }

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [var.subnet_cidr_block_dmz]
  }

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = [var.subnet_cidr_block_dmz]
  }


  ingress {
    description      = "HTTPS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = [var.subnet_cidr_block_dmz]
  }


  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
   }

  tags = {
    Name = "PenTest_private_SG"
  }
}

#======================================================================
# Create Pentest TLS key
#======================================================================

module tlskey {
  source = "../../modules/tlskey"
  key_name = "Pentest_key"
  pass_acc_abb = var.app_abb
}

#======================================================================
# Pentest Instance in Private Subnet
#======================================================================

resource "aws_instance" "PenTest" {
  ami                              = "ami-06e9ed0799116d0dd"
  instance_type                    = "t2.medium"
  associate_public_ip_address      = false
  key_name                         = module.tlskey.public_key_name
  monitoring                       = true
  subnet_id                        = module.network.pri-sn-id
  vpc_security_group_ids           = [aws_security_group.PenTest_pri_SG.id]
  

  root_block_device {
    volume_size           = "50"
    delete_on_termination = true
    encrypted             = true 
  }

  lifecycle {
    ignore_changes = [ami]
  }

  tags = {
    Name    = "PenTest host"
    Project = "C3S"
  }
}
